--- a/src/app/core/nav-list/nav-list.component.html
+++ b/src/app/core/nav-list/nav-list.component.html
@@ -1,12 +1,43 @@
 <div class="container">
   <mat-list role="list">
     <mat-list-item
-      *ngFor="let model of models | async"
       class="list-item"
       role="listitem"
       routerLinkActive="active-link"
-      [routerLink]="['category', model]">
-      {{model}}
+      routerLink="/category"
+    >
+      All cars
+    </mat-list-item>
+
+    <mat-list-item
+      class="list-item"
+      role="listitem"
+      routerLinkActive="active-link"
+      routerLink="/category"
+      [queryParams]="{ available: true }"
+    >
+      Available cars
+    </mat-list-item>
+
+    <mat-list-item
+      class="list-item"
+      role="listitem"
+      routerLinkActive="active-link"
+      routerLink="/category"
+      [queryParams]="{ available: false }"
+    >
+      Not available cars
+    </mat-list-item>
+
+    <mat-list-item
+      *ngFor="let brand of brands | async"
+      class="list-item"
+      role="listitem"
+      routerLinkActive="active-link"
+      routerLink="/category"
+      [queryParams]="{ brand: brand }"
+      >
+      {{ brand }}
     </mat-list-item>
   </mat-list>
 </div>
